data/derived/comb/progs/unify/prog4017.ml.out
Characters 14-15:
  string_of_int x;;;
                ^
Error: This expression has type string but an expression was expected of type
         int
